src/styles/components/_project.scss
.project-header {
  margin-bottom: 3rem;
}

.project-header__title {
}

.project-header__desc {
  font-style: italic;
}

.project-body__top {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  margin-bottom: 5rem;

  .project-detail {
    flex: 0 0 100%;

    @include break($bp-sm) {
      flex: 0 0 33.3333%;
    }
  }

  .project-detail:not(:last-child) {
    padding-right: 2rem;
  }

  .project-detail__title {
    margin-bottom: 1rem;
    font-size: 0.95rem;
    color: $c-text--gray;
  }
}

.project-body {
  a {
    position: relative;

    &:after {
      position: absolute;
      content: "";
      width: 100%;
      height: 4px;
      background-color: $c-hover;
      left: 0;
      bottom: -2px;
      z-index: -1;

      transition: height 0.2s $cubic;
    }

    &:hover,
    &:focus {
      outline: none;

      &:after {
        height: calc(100% + 2px);
      }
    }
  }

  ul,
  ol {
    list-style: initial;
    margin-left: 20px;
  }
}

.project-body__wysiwyg {
  h2 {
    margin: 3rem 0 2rem 0;
    font-size: 1.5rem;

    @include break($bp-sm) {
      font-size: 1.7rem;
    }
  }

  img,
  video {
    margin: 2rem auto;
    width: 100%;
  }
}

.project-body__closing {
  border-top: 2px solid $c-gray--light;
  padding-top: 3rem;
  margin: 3rem 0;
  text-align: center;

  > div:first-child {
    font-weight: 500;
  }
}

